--- a/ProCalcConsole/ProCalcConsole.csproj
+++ b/ProCalcConsole/ProCalcConsole.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>ProCalc</AssemblyName>
+		<AssemblyName>procalc</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
