add clipboard support

--- a/ProCalcConsole/ProCalcConsole.csproj
+++ b/ProCalcConsole/ProCalcConsole.csproj
@@ -8,6 +8,7 @@
 		<AssemblyName>procalc</AssemblyName>
 		<PublishAot>true</PublishAot>
 		<InvariantGlobalization>true</InvariantGlobalization>
+		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
