--- a/ProCalcConsole/ProCalcConsole.csproj
+++ b/ProCalcConsole/ProCalcConsole.csproj
@@ -12,7 +12,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.264">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\ProCalcCore\ProCalcCore.csproj" />
 	</ItemGroup>
+
+	<ProjectExtensions><VisualStudio><UserProperties nativemethods_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
